Removed unnecessary langVersion directive

--- a/Instructions/Labs/AZ-203_04_lab.md
+++ b/Instructions/Labs/AZ-203_04_lab.md
@@ -304,7 +304,7 @@ In this exercise, you configured your ASP.NET Core web application to connect to
 1.  Using a terminal, create a new .NET Core project named **AdventureWorks.Migrate** in a folder with the same name:
 
     ```
-    dotnet new console --name AdventureWorks.Migrate --langVersion 7.1
+    dotnet new console --name AdventureWorks.Migrate
     ```
 
     > **Note**: The **dotnet new** command will create a new **console** project in a folder with the same name as the project.
