Inclusive language review

--- a/Instructions/Labs/AZ-203_01_lab.md
+++ b/Instructions/Labs/AZ-203_01_lab.md
@@ -285,7 +285,7 @@ In this exercise, you created a web app in Azure and then deployed your ASP.NET 
 
 1.	Observe that the list of gallery images has updated with your new image.
 
-    > **Note**: In some rare cases, you might need to refresh your browser window for the new image to appear.
+    > **Note**: In some rare cases, you might need to refresh your browser window to retrieve the new image.
 
 1.  Close the currently running Visual Studio Code and Windows Terminal applications.
 
