--- a/Instructions/Labs/AZ-203_04_lab.md
+++ b/Instructions/Labs/AZ-203_04_lab.md
@@ -211,7 +211,7 @@ In this exercise, you created all the Azure resources that you'll need for a pol
     SELECT * FROM AdventureWorks.dbo.Models
     ```
 
-    > **Note**: This query will return a list of models that will appear on the home page of the web application.
+    > **Note**: This query will return a list of models on the home page of the web application.
 
 1.  Run this additional query, and then observe the results:
 
