--- a/Instructions/Labs/AZ-203_05_lab.md
+++ b/Instructions/Labs/AZ-203_05_lab.md
@@ -51,7 +51,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 1.  Sign in to the Azure portal (<https://portal.azure.com>).
 
-1.  If this is your first time signing in to the Azure portal, a dialog box will appear and a tour of the portal will start. Select **Get Started** to skip the tour.
+1.  If this is your first time signing in to the Azure portal, you'll notice a dialog box offering a tour of the portal. Select **Get Started** to skip the tour.
 
 #### Task 2: Create a resource group
 
