--- a/Instructions/Labs/AZ-203_12_lab.md
+++ b/Instructions/Labs/AZ-203_12_lab.md
@@ -231,7 +231,7 @@ In this exercise, you created the resources that you'll use for the remainder of
 
 1.  On the **Application Insights** blade, find the metrics displayed in the tiles in the center of the blade. Specifically, find the number of server requests that have occurred and the average server response time.
 
-    > **Note**: It can take up to five minutes for requests to appear in the Application Insights metrics charts.
+    > **Note**: It can take up to five minutes to observe requests in the Application Insights metrics charts.
 
 #### Review
 
@@ -333,7 +333,7 @@ In this exercise, you created an API by using ASP.NET Core and configured it to 
 
 1.  On the **Application Insights** blade, find the metrics displayed in the tiles in the center of the blade. Specifically, find the number of server requests that have occurred and the average server response time.
 
-    > **Note**: It can take up to five minutes for requests to appear in the Application Insights metrics charts.
+    > **Note**: It can take up to five minutes to observe requests in the Application Insights metrics charts.
 
 #### Task 4: View real-time metrics in Application Insights
 
