Inclusive language review addendum

--- a/Instructions/Labs/AZ-203_04_lab.md
+++ b/Instructions/Labs/AZ-203_04_lab.md
@@ -211,7 +211,7 @@ In this exercise, you created all the Azure resources that you'll need for a pol
     SELECT * FROM AdventureWorks.dbo.Models
     ```
 
-    > **Note**: This query will return a list of models on the home page of the web application.
+    > **Note**: This query will return a list of models from the home page of the web application.
 
 1.  Run this additional query, and then observe the results:
 
@@ -279,11 +279,11 @@ In this exercise, you imported all the resources that you'll use with your web a
 
     > **Note**: The URL is <http://localhost:5000>.
 
-1.  In the web application, observe the list of models displayed on the front page.
+1.  In the web application, observe the list of models displayed from the front page.
 
 1.  Find the **Water Bottle** model, and then select **View Details**.
 
-1.  On the **Water Bottle** product detail page, find **Add to Cart**, and then observe that the checkout functionality is currently disabled.
+1.  From the **Water Bottle** product detail page, find **Add to Cart**, and then observe that the checkout functionality is currently disabled.
 
     > **Note**: For now, only the product page functionality is implemented. You'll implement the checkout logic later in this lab.
 
@@ -712,11 +712,11 @@ In this exercise, you used Entity Framework and the .NET SDK for Azure Cosmos DB
 
     > **Note**: The URL is <http://localhost:5000>.
 
-1.  In the web application, observe the list of models displayed on the front page.
+1.  In the web application, observe the list of models displayed from the front page.
 
 1.  Find the **Touring-1000** model, and then select **View Details**.
 
-1.  On the **Touring-1000** product detail page, perform the following actions:
+1.  From the **Touring-1000** product detail page, perform the following actions:
 
     1.  In the **Select options** list, select **Touring-1000 Yellow, 50, $2,384.07**.
     
