--- a/Instructions/Labs/AZ-203_12_lab.md
+++ b/Instructions/Labs/AZ-203_12_lab.md
@@ -51,7 +51,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 #### Task 1: Open the Azure portal
 
-1.  On the taskbar, select the **Microsoft Edge** icon.
+1.  From the taskbar, select the **Microsoft Edge** icon.
 
 1.  Sign in to the Azure portal (<https://portal.azure.com>).
 
@@ -229,7 +229,7 @@ In this exercise, you created the resources that you'll use for the remainder of
 
 1.  Access the **instrm\*** Application Insights account that you created earlier in this lab.
 
-1.  On the **Application Insights** blade, find the metrics displayed in the tiles in the center of the blade. Specifically, find the number of server requests that have occurred and the average server response time.
+1.  From the **Application Insights** blade, find the metrics displayed in the tiles in the center of the blade. Specifically, find the number of server requests that have occurred and the average server response time.
 
     > **Note**: It can take up to five minutes to observe requests in the Application Insights metrics charts.
 
@@ -331,7 +331,7 @@ In this exercise, you created an API by using ASP.NET Core and configured it to 
 
 1.  Access the **instrm\*** Application Insights account that you created earlier in this lab.
 
-1.  On the **Application Insights** blade, find the metrics displayed in the tiles in the center of the blade. Specifically, find the number of server requests that have occurred and the average server response time.
+1.  From the **Application Insights** blade, find the metrics displayed in the tiles in the center of the blade. Specifically, find the number of server requests that have occurred and the average server response time.
 
     > **Note**: It can take up to five minutes to observe requests in the Application Insights metrics charts.
 
