--- a/Instructions/Labs/AZ-203_06_lab.md
+++ b/Instructions/Labs/AZ-203_06_lab.md
@@ -127,7 +127,7 @@ In this exercise, you created all the resources that you'll use for this lab.
 
 1.  Access the **securefunc\*** function app that you created earlier in this lab.
 
-1.  Browse to the **Identity** settings on the **Platform features** tab.
+1.  Browse to the **Identity** settings from the **Platform features** tab.
 
 1.  Enable the system-assigned managed identity, and then save your changes.
 
@@ -181,7 +181,7 @@ In this exercise, you created a server-assigned managed service identity for you
 
 1.  Access the **securefunc\*** function app that you created earlier in this lab.
 
-1.  Browse to the **Configuration** settings on the **Platform features** tab.
+1.  Browse to the **Configuration** settings from the **Platform features** tab.
 
 1.  Create a new application setting by using the following details:
     
@@ -294,9 +294,9 @@ In this exercise, you used a service identity to read the value of a secret stor
 
     > **Note**: This .proj file contains the NuGet package reference necessary to import the [Azure.Storage.Blobs](https://www.nuget.org/packages/Azure.Storage.Blobs/12.0.0) package.
 
-1.  Find the contents of the **function.proj** file by selecting the file on the **View files** tab.
+1.  Find the contents of the **function.proj** file by selecting the file from the **View files** tab.
 
-1.  Return to the editor for the **FileParser** function by selecting the **run.csx** file on the **View files** tab.
+1.  Return to the editor for the **FileParser** function by selecting the **run.csx** file from the **View files** tab.
 
 1.  Add two **using** directives for the **Azure.Storage**, **Azure.Storage.Blobs**, and **Azure.Storage.Blobs.Models** namespaces.
 
@@ -376,7 +376,7 @@ In this exercise, you used C\# code to access a storage account, and then downlo
     az group delete --name SecureFunction --no-wait --yes
     ```
     
-1.  Close the Cloud Shell pane on the portal.
+1.  Close the Cloud Shell pane from the portal.
 
 #### Task 3: Close the active application
 
