--- a/Instructions/Labs/AZ-203_12_lab.md
+++ b/Instructions/Labs/AZ-203_12_lab.md
@@ -51,7 +51,7 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 #### Task 1: Open the Azure portal
 
-1.  From the taskbar, select the **Microsoft Edge** icon.
+1.  On the taskbar, select the **Microsoft Edge** icon.
 
 1.  Sign in to the Azure portal (<https://portal.azure.com>).
 
