Lab 7 copy editing

--- a/Instructions/Labs/AZ-203_07_lab.md
+++ b/Instructions/Labs/AZ-203_07_lab.md
@@ -1,27 +1,27 @@
 ---
 lab:
-    title: 'Lab: Authenticating to and querying the Microsoft Graph using MSAL and .NET SDKs'
+    title: 'Lab: Authenticating to and querying Microsoft Graph by using MSAL and .NET SDKs'
     module: 'Module 07: '
 ---
 
-# Lab: Authenticating to and querying the Microsoft Graph using MSAL and .NET SDKs
+# Lab: Authenticating to and querying Microsoft Graph by using MSAL and .NET SDKs
 # Student lab manual
 
 ## Lab scenario
 
-As a new employee at your company, you have logged in to your Microsoft 365 applications for the first time and discovered that your profile information is not accurate. You noticed that the name and profile picture displayed when you login are not correct. Rather than change these values manually, you have determined that this is a good opportunity to learn the Microsoft Identity Platform and how you can use different libraries such as the Microsoft Authentication Library (MSAL) and the Microsoft Graph SDK to change these values in programmatic manner.
+As a new employee at your company, you signed in to your Microsoft 365 applications for the first time and discovered that your profile information isn't accurate. You also noticed that the name and profile picture when you sign in aren't correct. Rather than change these values manually, you have decided that this is a good opportunity to learn the Microsoft identity platform and how you can use different libraries such as the Microsoft Authentication Library (MSAL) and the Microsoft Graph SDK to change these values in a programmatic manner.
 
 ## Objectives
 
 After you complete this lab, you will be able to:
 
--   Create a new application registration in Azure Active Directory (Azure AD)
+-   Create a new application registration in Azure Active Directory (Azure AD).
 
--   Use the MSAL.NET library to implement the interactive authentication flow
+-   Use the MSAL.NET library to implement the interactive authentication flow.
 
--   Obtain a token from the Microsoft Identity Platform using the MSAL.NET library
+-   Obtain a token from the Microsoft identity platform by using the MSAL.NET library.
 
--   Query the Microsoft Graph using the Graph SDK and the device code flow
+-   Query Microsoft Graph by using the Microsoft Graph SDK and the device code flow.
 
 ## Lab setup
 
@@ -47,17 +47,17 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
 -   Visual Studio Code
 
-### Exercise 1: Create an Azure Active Directory application registration
+### Exercise 1: Create an Azure AD application registration
 
-#### Task 1: Open the Azure Portal
+#### Task 1: Open the Azure portal
 
 1.  Sign in to the Azure portal (<https://portal.azure.com>).
 
 1.  If this is your first time signing in to the Azure portal, you'll notice a dialog box offering a tour of the portal. Select **Get Started** to skip the tour.
 
-#### Task 2: Create application registration
+#### Task 2: Create an application registration
 
-1.  Create a new Azure Active Directory (Azure AD) **application registration** with the following details:
+1.  Create a new Azure AD application registration with the following details:
 
     -   Name: **graphapp*yourname***
 
@@ -67,31 +67,29 @@ Find the taskbar on your Windows 10 desktop. The taskbar contains the icons for 
 
     > **Note**: Wait for Azure to finish creating the registration before you move forward with the lab. You'll receive a notification when the vault is created.
 
-#### Task 3: Enable default client type
+#### Task 3: Enable the default client type
 
-1.  Navigate to the **Authentication** section of the **graphapp*yourname*** application registration blade.
+1.  Find the **Authentication** section of the **graphapp*yourname*** application registration blade, and then enable the **Default client type** option.
 
-1.  Enable the **Default client type** option.
-
-1.  **Save** your changes.
+1.  Save your changes.
 
 #### Task 4: Record unique identifiers
 
-1.  Navigate to **Overview** of the **graphapp*yourname*** application registration blade.
+1.  Browse to **Overview** of the **graphapp*yourname*** application registration blade.
 
-1.  Locate and record the value of the **Application (client) ID** field. You will use this value later in the lab.
+1.  Find and record the value of the **Application (client) ID** box. You'll use this value later in the lab.
 
-1.  Locate and record the value of the **Directory (tenant) ID** field. You will use this value later in the lab.
+1.  Find and record the value of the **Directory (tenant) ID** box. You'll use this value later in the lab.
 
 1.  Close the currently open browser window.
 
 #### Review
 
-In this exercise, you created a new application registration and recorded important values you will need later in the lab.
+In this exercise, you created a new application registration and recorded important values that you'll need later in the lab.
 
-### Exercise 2: Obtain a token using the MSAL.NET library
+### Exercise 2: Obtain a token by using the MSAL.NET library
 
-#### Task 1: Create .NET Core project
+#### Task 1: Create a .NET Core project
 
 1.  Using Visual Studio Code, open the **Allfiles (F):\\Allfiles\\Labs\\07\\Starter\\GraphClient** folder.
 
@@ -134,7 +132,7 @@ In this exercise, you created a new application registration and recorded import
     using System.Threading.Tasks;
     ```
 
-1.  Create a new **Program** class with a two constant string properties named **_clientId**, and **_tenantId**, and then create an asynchronous **Main** entry point method:
+1.  Create a new **Program** class with two constant string properties named **_clientId** and **_tenantId**, and then create an asynchronous **Main** entry point method:
 
     ```
     public class Program
@@ -148,17 +146,17 @@ In this exercise, you created a new application registration and recorded import
     }
     ```
 
-1.  Update the **_clientId** string constant by by setting its value to the **Application (client) ID** that you recorded earlier in this lab.
+1.  Update the **_clientId** string constant by setting its value to the **Application (client) ID** that you recorded earlier in this lab.
 
-1.  Update the **_tenantId** string constant by by setting its value to the **Directory (tenant) ID** that you recorded earlier in this lab.
+1.  Update the **_tenantId** string constant by setting its value to the **Directory (tenant) ID** that you recorded earlier in this lab.
 
-#### Task 3: Obtain a MSAL token
+#### Task 3: Obtain an MSAL token
 
 1.  In the **Main** method, perform the following actions:
 
-    1.  Create a new variable named **app** of type **[IPublicClientApplication](https://docs.microsoft.com/dotnet/api/microsoft.identity.client.ipublicclientapplication)**.
+    1.  Create a new variable named *app* of type **[IPublicClientApplication](https://docs.microsoft.com/dotnet/api/microsoft.identity.client.ipublicclientapplication)**.
 
-    1.  Add the following block of code to build a public client application instance using the static **[PublicClientApplicationBuilder](https://docs.microsoft.com/dotnet/api/microsoft.identity.client.publicclientapplicationbuilder)** class and store it in the **app** variable:
+    1.  Add the following block of code to build a public client application instance by using the static **[PublicClientApplicationBuilder](https://docs.microsoft.com/dotnet/api/microsoft.identity.client.publicclientapplicationbuilder)** class, and then store it in the *app* variable:
 
         ```
         app = PublicClientApplicationBuilder
@@ -177,9 +175,9 @@ In this exercise, you created a new application registration and recorded import
         };
         ```
 
-    1.  Create a new variable named **result** of type **[AuthenticationResult](https://docs.microsoft.com/dotnet/api/microsoft.identity.client.authenticationresult)**.
+    1.  Create a new variable named *result* of type **[AuthenticationResult](https://docs.microsoft.com/dotnet/api/microsoft.identity.client.authenticationresult)**.
 
-    1.  Add the following block of code to acquire a token interactively and store the output in the **result** variable:
+    1.  Add the following block of code to acquire a token interactively and store the output in the *result* variable:
 
         ```
         result = await app
@@ -207,11 +205,11 @@ In this exercise, you created a new application registration and recorded import
 
 1.  The running console application will automatically open an instance of the default browser.
 
-1.  In the open browser window, sign in using your Microsoft account.
+1.  In the open browser window, sign in by using your Microsoft account.
 
-    > **Note**: You may have the option to select an existing Microsoft account as opposed to signing in again.
+    > **Note**: You might have the option to select an existing Microsoft account as opposed to signing in again.
 
-1.  The browser window will automatically navigate to the **Permissions requested** web page. **Accept** the request for permissions.
+1.  The browser window will automatically go to the **Permissions requested** webpage. Accept the request for permissions.
 
 1.  Close the currently open browser window.
 
@@ -221,9 +219,9 @@ In this exercise, you created a new application registration and recorded import
 
 #### Review
 
-In this exercise, you acquired a token from the Microsoft Identity Platform using the MSAL.NET library.
+In this exercise, you acquired a token from the Microsoft identity platform by using the MSAL.NET library.
 
-### Exercise 3: Query the Microsoft Graph using the .NET SDK
+### Exercise 3: Query Microsoft Graph by using the .NET SDK
 
 #### Task 1: Import the Microsoft Graph SDK from NuGet
 
@@ -264,7 +262,7 @@ In this exercise, you acquired a token from the Microsoft Identity Platform usin
 
 #### Task 3: Use the Microsoft Graph SDK to query user profile information
 
-1.  Within the **Main** method, delete the following block of code to remove unnecessary code:
+1.  Within the **Main** method, remove the following block of unnecessary code:
 
     ```
     AuthenticationResult result;
@@ -284,19 +282,19 @@ In this exercise, you acquired a token from the Microsoft Identity Platform usin
 
 1.  In the **Main** method, perform the following actions:
 
-    1.  Create a new variable named **provider** of type **DeviceCodeProvider** that passes in the variables **app**, and **scopes** as constructor parameters:
+    1.  Create a new variable named *provider* of type **DeviceCodeProvider** that passes in the variables *app*, and *scopes* as constructor parameters:
 
         ```
         DeviceCodeProvider provider = new DeviceCodeProvider(app, scopes);
         ```
 
-    1.  Create a new varilable named **client** of type **GraphServiceClient** that passes in the variable **provider** as a constructor parameter:
+    1.  Create a new variable named *client* of type **GraphServiceClient** that passes in the variable *provider* as a constructor parameter:
 
         ```
         GraphServiceClient client = new GraphServiceClient(provider);
         ```
 
-    1.  Add the following block of code to use the **GraphServiceClient** instance to asynchronously get the response of issuing an HTTP request to the relative **/Me** directory of the REST API and store the result in a new variable named **myProfile** of type **User**:
+    1.  Add the following block of code to use the **GraphServiceClient** instance to asynchronously get the response of issuing an HTTP request to the relative **/Me** directory of the REST API, and then store the result in a new variable named *myProfile* of type **User**:
 
         ```
         User myProfile = await client.Me
@@ -306,10 +304,10 @@ In this exercise, you acquired a token from the Microsoft Identity Platform usin
 
     1.  Render the value of the **User.DisplayName** and **User.Id** members to the console:
 
-    ```
-    Console.WriteLine($"Name:\t{myProfile.DisplayName}");
-    Console.WriteLine($"AAD Id:\t{myProfile.Id}");
-    ```
+        ```
+        Console.WriteLine($"Name:\t{myProfile.DisplayName}");
+        Console.WriteLine($"AAD Id:\t{myProfile.Id}");
+        ```
 
 1.  Save the **Program.cs** file.
 
@@ -323,25 +321,23 @@ In this exercise, you acquired a token from the Microsoft Identity Platform usin
 
     > **Note**: If there are any build errors, review the **Program.cs** file in the **Allfiles (F):\\Allfiles\\Labs\\07\\Solution\\GraphClient** folder.
 
-1.  Observe the message rendered in the output from the currently running console application. Record the value of the **code** rendered in the message. You will use this value later in the lab.
+1.  Observe the message in the output from the currently running console application. Record the value of the code in the message. You'll use this value later in the lab.
 
-1.  Navigate to the following url: <https://microsoft.com/devicelogin>.
+1.  Go to <https://microsoft.com/devicelogin>, and then enter the code value that you copied earlier in the lab.
 
-1.  Enter the value of the **code** you copied earlier in the lab.
+1.  Sign in by using your Microsoft account.
 
-1.  Sign in using your Microsoft account.
-
-    > **Note**: You may have the option to select an existing Microsoft account as opposed to signing in again.
+    > **Note**: You might have the option to select an existing Microsoft account as opposed to signing in again.
 
 1.  Close the currently open browser window.
 
-1.  In the **Visual Studio Code** window, observe the rendered output from the Microsoft Graph request in the currently running console application.
+1.  In the **Visual Studio Code** window, observe the output from the Microsoft Graph request in the currently running console application.
 
 1.  Close the current terminal.
 
 #### Review
 
-In this exercise, you queried the Microsoft Graph using the SDK and MSAL-based authentication.
+In this exercise, you queried Microsoft Graph by using the SDK and MSAL-based authentication.
 
 ### Exercise 4: Clean up your subscription 
 
@@ -349,7 +345,7 @@ In this exercise, you queried the Microsoft Graph using the SDK and MSAL-based a
 
 1.  Access the **graphapp*yourname*** Azure AD application registration that you created earlier in this lab.
 
-1.  **Delete** the application registration.
+1.  Delete the application registration.
 
 #### Task 2: Close the active applications
 
