--- a/Instructions/Labs/AZ-203_05_lab.md
+++ b/Instructions/Labs/AZ-203_05_lab.md
@@ -350,6 +350,8 @@ In this exercise, you created a .NET Core console application to display a machi
 
     -	Image name: ***login server recorded earlier in the lab*/ipcheck:latest**
 
+        > **Note**: For example, if your **Login server** value is **azadmin.azurecr.io**, then your container image name would be **azadmin.azurecr.io/ipcheck:latest**
+
     -	Image registry login server: ***login server recorded earlier in the lab***
 
     -	Image registry user name: ***username recorded earlier in the lab***
